--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,8 +27,8 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: apt install mysql-server
+        run: sudo apt install mysql-server
 
       # Runs a set of commands using the runners shell
       - name: Run our script test
-        run: sh service_check.sh services.txt >> log.csv
+        run: sudo sh service_check.sh services.txt >> log.csv
