--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,9 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: sudo apt install mysql-server
+        run: 
+            sudo apt install mysql-server-8.0
+            sudo apt install mysql-server
 
       # Runs a set of commands using the runners shell
       - name: Run our script test
