--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: INSTALL SERVERS
-        run: sudo apt install mysql-server-8.0 mysql-server
+        run: sudo apt-get install mysql-common mysql-server-8.0 mysql-server
 
       # Runs a set of commands using the runners shell
       - name: Run our script test
