--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04.3
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,7 +27,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: INSTALL SERVERS
-        run: sudo apt-get install mysql-common mysql-server-8.0 mysql-server
+        run: sudo apt-get install mysql-client-8.0 mysql-common mysql-server-8.0 mysql-server-8.0
 
       # Runs a set of commands using the runners shell
       - name: Run our script test
