--- a/.github/workflows/test_CI.yml
+++ b/.github/workflows/test_CI.yml
@@ -28,7 +28,7 @@ jobs:
       # Runs a single command using the runners shell
       - name: INSTALL SERVERS
         run: |
-            sudo systemctl status mysql.service
+            sudo systemctl start mysql.service
             sudo systemctl status postgresql.service
             sudo apt-get install mysql-common mysql-client-core-8.0 mysql-client-8.0 mysql-server-core-8.0 mysql-server-8.0
 
