--- a/.github/workflows/test_CI.yml
+++ b/.github/workflows/test_CI.yml
@@ -26,12 +26,13 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: INSTALL SERVERS
+      - name: Laounch Services
         run: |
             sudo systemctl start mysql.service
-            sudo systemctl status postgresql.service
-            sudo apt-get install mysql-common mysql-client-core-8.0 mysql-client-8.0 mysql-server-core-8.0 mysql-server-8.0
+            sudo systemctl start postgresql.service
+            sudo systemctl start apache2.service
+      # sudo apt-get install mysql-common mysql-client-core-8.0 mysql-client-8.0 mysql-server-core-8.0 mysql-server-8.0
 
       # Runs a set of commands using the runners shell
-      - name: Run our script test
+      - name: Run our script 
         run: sudo sh service_check.sh services.txt >> log.csv
